[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://ui/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/common/button_base/icons/icon_exit.png" type="Texture" id=3]
[ext_resource path="res://ui/common/button_base/ButtonBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/common/button_base/icons/icon_start.png" type="Texture" id=5]
[ext_resource path="res://ui/common/button_base/icons/icon_ai_priority.png" type="Texture" id=6]
[ext_resource path="res://ui/common/button_base/icons/icon_information.png" type="Texture" id=7]
[ext_resource path="res://ui/common/button_base/icons/icon_settings.png" type="Texture" id=8]
[ext_resource path="res://ui/common/button_base/icons/icon_upgrades.png" type="Texture" id=9]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 240.0
margin_right = 64.0
margin_bottom = 368.0
icon = ExtResource( 5 )

[node name="ExitButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = 160.0
margin_right = -144.0
margin_bottom = 288.0
icon = ExtResource( 3 )

[node name="SettingButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 144.0
margin_top = 160.0
margin_right = 272.0
margin_bottom = 288.0
icon = ExtResource( 8 )

[node name="AboutButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -288.0
margin_right = -144.0
margin_bottom = -160.0
icon = ExtResource( 7 )

[node name="AIPriorityButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -368.0
margin_right = 64.0
margin_bottom = -240.0
icon = ExtResource( 6 )

[node name="UpgradesButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 144.0
margin_top = -288.0
margin_right = 272.0
margin_bottom = -160.0
icon = ExtResource( 9 )
